[package]
name = "tables"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = { version = "0.12.2", features = ["inserter"] }
crossbeam-deque = "0.8.5"
crossbeam-utils = "0.8.20"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0.209", features = ["derive"] }